--- a/application/web/main.css
+++ b/application/web/main.css
@@ -80,7 +80,7 @@ sidebar {
 }
 
 
-.sidebar-module .fa.fa-ellipsis-v{
+.sidebar-module .vdots{
     display:none;
 }
 
@@ -123,6 +123,8 @@ button.new-journal img.journal-icon {
     align-items: center;
     cursor: pointer;
     font-size: 16px;
+    min-height: 40px;
+    margin-bottom: 10px;
 }
 
 .journal-entry i.icon {
