--- a/application/web/main.css
+++ b/application/web/main.css
@@ -59,14 +59,14 @@ sidebar {
 
 .sidebar-header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     width: 100%;
 }
 
 .sidebar-module {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
 }
 
@@ -132,6 +132,19 @@ img.collapse-button {
 
 .sidebar-collapsed {
     width: 50px;
+}
+
+.toggled-sidebar-module {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.toggled-new-journal,
+ .toggled-journal-entry {
+    visibility: hidden;
 }
 
 .sidebar-collapsed button.collapse-button {
