--- a/application/web/main.css
+++ b/application/web/main.css
@@ -55,6 +55,7 @@ sidebar {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    transition: width 0.3s ease;
 }
 
 .sidebar-header {
@@ -68,6 +69,7 @@ sidebar {
     flex-direction: column;
     justify-content: center;
     width: 100%;
+    transition: width 0.3s ease;
 }
 
 button.new-journal {
@@ -143,7 +145,8 @@ img.collapse-button {
 }
 
 .toggled-new-journal,
- .toggled-journal-entry {
+.toggled-journal-entry {
+    transition: width 0.3s ease;
     visibility: hidden;
 }
 
