--- a/application/web/main.css
+++ b/application/web/main.css
@@ -175,11 +175,49 @@ homepage {
 \__/|_| |_|\__|_|   \__, |
                     |___/  */
 
+
+
+/* The actual popup */
+.popup {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(
+        0,
+        0,
+        0,
+        0.4
+    );
+    display: none;
+}
+.popup-content {
+    display:flex;
+    flex-direction: row;
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888888;
+    width: 60%;
+    font-weight: bolder;
+    border-radius: 5px;
+}
+.popup-content button {
+    display: block;
+    margin: 0 auto;
+}
+.show {
+    display: block;
+}
+
 .secondary {
     background-color: #F3F3F3;
     color: var(--grey-text-color);
     border-radius: 5px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     display: flex;
     justify-content: space-between;
     align-items: center;
