--- a/application/web/main.css
+++ b/application/web/main.css
@@ -67,7 +67,7 @@ sidebar {
 .sidebar-module {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
     transition: width 0.3s ease;
 }
@@ -102,13 +102,8 @@ button.collapse-button {
     width: 32px;
 }
 
-button.new-journal i.icon {
-    margin-left: 10px;
-}
-
 button.new-journal img.journal-icon,
 img.collapse-button {
-    margin-left: 10px;
     height: 20px;
     width: 20px;
 }
