--- a/application/web/main.css
+++ b/application/web/main.css
@@ -123,6 +123,7 @@ button.new-journal img.journal-icon {
     align-items: center;
     cursor: pointer;
     font-size: 16px;
+    min-height: 40px;
     margin-bottom: 10px;
 }
 
