--- a/application/web/main.css
+++ b/application/web/main.css
@@ -107,6 +107,7 @@ button.new-journal img.journal-icon {
     border-radius: 5px;
     padding: 10px;
     width: 100%;
+    margin-bottom: 10px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -115,7 +116,6 @@ button.new-journal img.journal-icon {
     font-size: 16px;
     min-height: 40px;
 }
-
 
 .journal-entry i.icon {
     margin-left: 10px;
