--- a/application/web/main.css
+++ b/application/web/main.css
@@ -162,7 +162,14 @@ img.collapse-button {
 .sidebar-collapsed button.collapse-button {
     transform: rotate(180deg);
 }
-
+.edit-journal {
+    padding: 0;
+    border: none;
+    background: transparent;
+}
+.edit-journal > img {
+    cursor: pointer;
+}
                       /* _           
   /\  /\___  __ _  __| | ___ _ __ 
  / /_/ / _ \/ _` |/ _` |/ _ \ '__|
