--- a/application/web/main.css
+++ b/application/web/main.css
@@ -11,6 +11,7 @@
     --grey-text-color: #404040;
     --icon-color: #D7D7D7;
     --font-family: 'Dosis', sans-serif;
+    --font-family-journals: 'Inter';
     --dark-green: #58A399;
     --dark-blue: #496989
 }
@@ -266,9 +267,6 @@ button.add-note:hover {
     box-sizing: border-box;
     border: 3px solid #e2dede;
     border-radius: 10px; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: var(--journal-entry);
     padding: 10px;
 }
@@ -286,11 +284,23 @@ button.add-note:hover {
 
 .new_entry {
     color: #FFFFFF;
+    align-content: center;
+    font-family: var(--font-family-journals);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.entry-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 12px;
 }
 
 .cancel-save-container {
-    /* display: flex;
-    justify-content: end; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
    /* __      _              
@@ -299,15 +309,6 @@ button.add-note:hover {
 //__| | | | |_| |  | |_| |
 \__/|_| |_|\__|_|   \__, |
                     |___/  */
-
-
-.title-entry-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--journal-entry);
-    padding: 10px;
-}
 
 /* The actual popup */
 .popup {
@@ -328,7 +329,7 @@ button.add-note:hover {
     padding: 20px;
     width: 13%;
     height: 12%;
-    border-radius: 5px;
+    border-radius: 8px;
     box-shadow: 2px 6px 5px 1px rgba(64,64,64,0.5);
 
 }
@@ -343,14 +344,14 @@ button.add-note:hover {
     background-color: var(--journal-entry);
     color: var(--grey-text-color);
     border-radius: 8px;
-    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     font-size: 15px;
     min-height: 40px;
-    margin-right: 10px;
+    border: 1px solid;
+    font-family: var(--font-family-journals);
 }
 
 .primary {
@@ -365,10 +366,7 @@ button.add-note:hover {
     cursor: pointer;
     font-size: 15px;
     min-height: 40px;
-}
-
-.title-entry {
-    margin: 0;
+    font-family: var(--font-family-journals);
 }
 
 /* The div holding the buttons*/
@@ -383,7 +381,7 @@ button.add-note:hover {
     background-color: var(--journal-entry);
     border: none;
     border-bottom: 2px solid var(--grey-text-color);
-    padding: 5px 0;
+    padding-left: 10px;
     width: 200px;
     outline: none;
 }
@@ -402,10 +400,10 @@ button.add-note:hover {
     border-bottom-color: var(--dark-blue);
 }
 
-
 .discardCancelContainer {
     display:flex;
     flex-direction: row;
     padding-top: 60px;
     padding-left: 118px;
+    gap:10px;
 }
