--- a/application/web/main.css
+++ b/application/web/main.css
@@ -304,6 +304,38 @@ button.add-note:hover {
     justify-content: space-between;
 }
 
+.home-entry-descriptor {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 60px; 
+    padding-bottom: 10px;
+}
+
+.home-single-entry {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px 3px;
+    margin-top: 10px;
+    width: 100%;
+    background-color: var(--journal-entry);
+    border: none;
+    border-bottom: 2px solid var(--grey-text-color);
+    font-size: 16px;
+}
+
+.home-list img[src="/application/web/assets/vdots-entry-black.png"]{
+    visibility: visible;
+    margin-left: 37px;
+    max-width: 20px;
+    max-height: 20px;
+}
+.home-entry-name{
+    display: flex;
+    flex-grow: 1;
+}
+
    /* __      _              
   /__\ __ | |_ _ __ _   _ 
  /_\| '_ \| __| '__| | | |
