--- a/application/web/main.css
+++ b/application/web/main.css
@@ -310,30 +310,36 @@ button.add-note:hover {
     justify-content: space-between;
     padding-right: 60px; 
     padding-bottom: 10px;
+    font-family: var(--font-family-journals);
+}
+.home-single-entry{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0px 2px; 
+    border-bottom: 2px solid var(--grey-text-color);
 }
 
-.home-single-entry {
+.home-single-entry-button {
+    font-size: 15px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 10px 3px;
-    margin-top: 10px;
     width: 100%;
     background-color: var(--journal-entry);
     border: none;
-    border-bottom: 2px solid var(--grey-text-color);
-    font-size: 16px;
+    cursor: pointer;
+
 }
 
-.home-list img[src="/application/web/assets/vdots-entry-black.png"]{
-    visibility: visible;
-    margin-left: 37px;
-    max-width: 20px;
-    max-height: 20px;
-}
-.home-entry-name{
-    display: flex;
-    flex-grow: 1;
+.home-list img[src="../web/assets/vdots-entry-black.png"]{
+    background-color: var(--journal-entry);
+    border: none;
+    margin-left: 20px;
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
 }
 
    /* __      _              
