[fix]: fixed resizable entry textarea

--- a/application/web/main.css
+++ b/application/web/main.css
@@ -231,6 +231,7 @@ homepage {
     }
     &>.entry-textarea {
         display: none;
+        resize: none;
     }
     &>.save-note {
         display: none;
