style: included missing styling

--- a/application/web/main.css
+++ b/application/web/main.css
@@ -345,6 +345,11 @@ button.add-note:hover {
     cursor: pointer;
 }
 
+.no-entry-text{
+    font-family: var(--font-family);
+    font-size: large;
+}
+
    /* __      _              
   /__\ __ | |_ _ __ _   _ 
  /_\| '_ \| __| '__| | | |
