--- a/application/web/main.css
+++ b/application/web/main.css
@@ -347,7 +347,7 @@ button.add-note:hover {
 
 .no-entry-text{
     font-family: var(--font-family);
-    font-size: large;
+    font-size: 24px;
 }
 
    /* __      _              
