--- a/application/web/main.css
+++ b/application/web/main.css
@@ -287,7 +287,8 @@ button.add-note:hover {
 .CodeMirror {
     background-color: #e2dede;
     width: 100%;
-    min-height: 400px;
+    height: 100%;
+    /*min-height: 400px;
     /*font-size: 15px;*/
     box-sizing: content-box;
     border: none;
