--- a/application/web/main.css
+++ b/application/web/main.css
@@ -353,6 +353,7 @@ button.add-note:hover {
 
 .no-entry-text{
     font-family: var(--font-family);
+    margin-top: 10px;
     font-size: 24px;
 }
 
