--- a/application/web/main.css
+++ b/application/web/main.css
@@ -357,6 +357,10 @@ button.add-note:hover {
     font-size: 24px;
 }
 
+.no-display {
+    display: none;
+}
+
    /* __      _              
   /__\ __ | |_ _ __ _   _ 
  /_\| '_ \| __| '__| | | |
