--- a/application/web/style/sidebar.css
+++ b/application/web/style/sidebar.css
@@ -91,6 +91,25 @@ button.new-journal i.icon {
     margin-left: 10px;
 }
 
+.new-journal-name {
+    background-color: var(white);
+    color: var(--dark-green);
+    border-color: var(--dark-green);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    font-size: 16px;
+    min-height: 40px;
+}
+
 button.new-journal img.journal-icon,
 img.collapse-button {
     height: 20px;
