fix: journal vdots no longer always display

--- a/application/web/style/sidebar.css
+++ b/application/web/style/sidebar.css
@@ -64,10 +64,12 @@ sidebar {
 .journal button{
     background-color: var(--sliding-shelf);
     border: none;
+    display: none;
 }
 
 .journal:hover button{
     background-color: #cbcfce;
+    display: block;
 }
 
 .journal-vdots:hover {
