feat: added live-rendering window

--- a/application/web/style/homepage.css
+++ b/application/web/style/homepage.css
@@ -17,6 +17,10 @@ homepage {
         display: none;
         resize: none;
     }
+    &>.live-preview {
+        display: none;
+        resize: none;
+    }
     &>.save-note {
         display: none;
     }
