--- a/application/web/style/entry.css
+++ b/application/web/style/entry.css
@@ -8,14 +8,27 @@
 
 
 .CodeMirror{
+    float: left;
     background-color: #e2dede;
-    width: 100%;
+    width: 50%;
     min-height: 400px;
     font-size: 15px;
     padding: 10px;
     box-sizing: border-box;
     border: none;
     border-radius: 10px;
+   }
+
+.live-preview {
+     float: right;
+     /*background-color: #e2dede;*/
+     width: 50%;
+     min-height: 400px;
+     font-size: 15px;
+     padding: 10px;
+     box-sizing: border-box;
+     border: none;
+     border-radius: 10px;
    }
 
 .title-textarea {
@@ -31,23 +44,6 @@
     background-color: var(--journal-entry);
     padding: 10px;
 }
-
-   /* LRC  
-    * These are not needed, .CodeMirror defines
-    * the attributes
-
-   /*
-.entry-textarea {
-    background-color: #e2dede;
-    width: 100%;
-    min-height: 400px;
-    font-size: 15px;
-    padding: 10px;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 10px;
-}
-*/
 
 .new_entry {
     color: #FFFFFF;
@@ -112,111 +108,15 @@
     height: 22px;
     cursor: pointer;
 }
-                    
-.title-textarea {
-    /* background-color: #F3F3F3;
-    width: 20%;
-    min-height: 10px;
-    font-size: 20px;
-    padding: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    border: 3px solid #e2dede;
-    border-radius: 10px; */
-    background-color: var(--journal-entry);
-    padding: 10px;
-}
-
-   /*
-.entry-textarea {
-    background-color: #e2dede;
-    width: 100%;
-    min-height: 400px;
-    font-size: 15px;
-    padding: 10px;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 10px;
-}
-*/
-
-.new_entry {
-    color: #FFFFFF;
-    align-content: center;
-    font-family: var(--font-family-journals);
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.entry-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 12px;
-}
 
 .cancel-save-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-
-.no-entry-text{
-    font-family: var(--font-family);
-    margin-top: 10px;
-    font-size: 24px;
-}
-
-.no-entry-text{
-    font-family: var(--font-family);
-    margin-top: 10px;
-    font-size: 24px;
-}
-                    
+                   
 .no-display {
     display: none;
-}
-
-.title-textarea {
-    /* background-color: #F3F3F3;
-    width: 20%;
-    min-height: 10px;
-    font-size: 20px;
-    padding: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    border: 3px solid #e2dede;
-    border-radius: 10px; */
-    background-color: var(--journal-entry);
-    padding: 10px;
-}
-
-   /*
-.entry-textarea {
-    background-color: #e2dede;
-    width: 100%;
-    min-height: 400px;
-    font-size: 15px;
-    padding: 10px;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 10px;
-}
-*/
-
-.new_entry {
-    color: #FFFFFF;
-    align-content: center;
-    font-family: var(--font-family-journals);
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.entry-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 12px;
 }
 
 .cancel-save-container {
