--- a/application/web/main.css
+++ b/application/web/main.css
@@ -140,7 +140,7 @@ img.collapse-button {
     width: 20px;
 }
 
-.journal-entry {
+.journal {
     background-color: #cbcfce;
     color: var(--grey-text-color);
     border-radius: 5px;
@@ -158,7 +158,7 @@ img.collapse-button {
 }
 
 
-.journal-entry i.icon {
+.journal i.icon {
     margin-left: 10px;
 }
 
@@ -175,7 +175,7 @@ img.collapse-button {
 }
 
 .toggled-new-journal,
-.toggled-journal-entry {
+.toggled-journal {
     transition: width 0.3s ease;
     visibility: hidden;
 }
