--- a/application/web/style/sidebar.css
+++ b/application/web/style/sidebar.css
@@ -181,11 +181,19 @@ img.collapse-button {
 }
 
 .toggled-new-journal,
-.toggled-journal-entry {
+.toggled-journal{
     transition: width 0.3s ease;
     visibility: hidden;
 }
 
 .sidebar-collapsed button.collapse-button {
     transform: rotate(180deg);
+}
+
+.journal-list {
+    border: none;
+}
+    
+.journal-text {
+    font-family: 'Inter';
 }
