--- a/application/web/style/entry.css
+++ b/application/web/style/entry.css
@@ -74,7 +74,7 @@
     justify-content: space-between;
 }
 
-#no-entry-text {
+#no-entry-text, .no-entry-text {
     display: block;
     margin-top: 10px;
     font-size: 24px;
